1998-08-27  Tanaka Akira      <akr@jaist.ac.jp>

	* FLIM-ELS (flime-modules): Add ew-ccl.

	* ew-bq.el: Now it is stub to ew-ccl and mel.

	* ew-ccl: New file (renamed from ew-bq.el).

1998-08-27  Tanaka Akira      <akr@jaist.ac.jp>

	* ew-dec.el (ew-decode-field-test): Now interactive.

	* eword-decode.el (eword-decode-header): Put original field as
	text properties.

	* mmbuffer.el (insert-decoded-header): Put original field as
	text properties.

1998-08-27  Tanaka Akira      <akr@jaist.ac.jp>

	* DOODLE-TIPS: Add a notice about EVALARGS.

	* Makefile: evaluate environment variable EVALARGS if it is not
	empty.

	* ew-bq.el:
	  - Use CCL emulating stuff of APEL.
	  - Delete useless `eval-when-compile' in body of
	  `define-ccl-program'.

1998-08-26  Tanaka Akira      <akr@jaist.ac.jp>

	* ew-scan-n.el: New file.

1998-08-26  Tanaka Akira      <akr@jaist.ac.jp>

	* FLIM-ELS (flim-modules): Add `ew-scan-n'.

	* ew-dec.el: Require 'ew-scan-n.

	* ew-parse.scm: Add new token `n-body'.

	* ew-var.el (ew-decode-field-syntax-alist): Add fields definition
	`newsgroups', `path', `lines' and `xref'.

1998-08-26  Tanaka Akira      <akr@jaist.ac.jp>

	* ew-dec.el (ew-decode-field-test): New function.

1998-08-26  Tanaka Akira      <akr@jaist.ac.jp>

	* DOODLE-TIPS (gnus-structured-field-decoder): Use
	`eword-decode-and-unfold-structured-field'.
	(gnus-unstructured-field-decoder): Use
	`eword-decode-unstructured-field-body'.

1998-08-25  Tanaka Akira      <akr@jaist.ac.jp>

	* ew-bq.el (ew-ccl-untrusted-eof-block): Check by coding system instead
	of CCL directly.

1998-08-25  Tanaka Akira      <akr@jaist.ac.jp>

	* ew-bq.el (ew-ccl-decode-b): Eliminate `>8=' before `write'.

1998-08-25  Tanaka Akira      <akr@jaist.ac.jp>

	* ew-bq.el (ew-ccl-decode-b-0-table): Use `if' instead of `cond'
	(ew-ccl-decode-b-1-table): Ditto.
	(ew-ccl-decode-b-2-table): Ditto.
	(ew-ccl-decode-b-3-table): Ditto.

	* ew-quote.el:
	  - Move `ew-quoting-char', `ew-quoting-chars-regexp' and