@@ -1,5 +1,10 @@
 1998-08-27  Tanaka Akira      <akr@jaist.ac.jp>
 
+	* ew-dec.el (ew-decode-field-test): Search around current point
+	as default argument when called interactive.
+
+1998-08-27  Tanaka Akira      <akr@jaist.ac.jp>
+
 	* FLIM-ELS (flime-modules): Add ew-ccl.
 
 	* ew-bq.el: Now it is stub to ew-ccl and mel.
